--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -26,6 +26,11 @@ body {
 
 // Entry Header
 // --------------------------------------------------
+.entry-image img
+{
+	background-size: cover;
+}
+
 .entry-header {
 	width: 100%;
 	overflow: hidden;
